[gd_scene load_steps=8 format=3 uid="uid://bdsfohr2b5k1v"]

[ext_resource type="Script" path="res://scenes/mob.gd" id="1_n0x2y"]
[ext_resource type="Texture2D" uid="uid://tpxov2n8ih2x" path="res://assets/art/tomato.webp" id="2_5qpme"]
[ext_resource type="PackedScene" uid="uid://ikg8mhk7ewb2" path="res://scenes/health_bar.tscn" id="3_yyuv4"]
[ext_resource type="AudioStream" uid="uid://dgtchbfp1ec4i" path="res://assets/audio/enemy_damage.wav" id="4_p52w5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5uqgo"]
size = Vector2(104, 104)

[sub_resource type="CircleShape2D" id="CircleShape2D_lelyy"]
radius = 13.0384

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mljh6"]
size = Vector2(191, 105.5)

[node name="Mob" type="CharacterBody2D" groups=["mobs"]]
position = Vector2(-145, 10)
script = ExtResource("1_n0x2y")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.12, 0.12)
texture = ExtResource("2_5qpme")
region_rect = Rect2(13.5, 67.25, 24, 24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 10)
shape = SubResource("RectangleShape2D_5uqgo")

[node name="MobAttack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MobAttack"]
position = Vector2(1, 16)
shape = SubResource("CircleShape2D_lelyy")
debug_color = Color(0.996319, 0, 0.189017, 0.42)

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, 13)
shape = SubResource("RectangleShape2D_mljh6")

[node name="HealthBar" parent="." instance=ExtResource("3_yyuv4")]
position = Vector2(-41, -74)
scale = Vector2(0.75, 0.75)
totalHealth = 15

[node name="Damage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_p52w5")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
